keys now get color from firestore

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,117 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>Online RGB control</title>
   </head>
   <body>
+    <h1>color my keyboard</h1>
+    <div id="keyboard">
+      <div id="keys-row1" class="key-row">
+        <div class="key" id="key-esc">ESC</div>
+        <div class="key" id="key-f1">F1</div>
+        <div class="key" id="key-f2">F2</div>
+        <div class="key" id="key-f3">F3</div>
+        <div class="key" id="key-f4">F4</div>
+        <div class="key" id="key-f5">F5</div>
+        <div class="key" id="key-f6">F6</div>
+        <div class="key" id="key-f7">F7</div>
+        <div class="key" id="key-f8">F8</div>
+        <div class="key" id="key-f9">F9</div>
+        <div class="key" id="key-f10">F10</div>
+        <div class="key" id="key-f11">F11</div>
+        <div class="key" id="key-f12">F12</div>
+        <div class="key wide" id="key-home">HOME</div>
+        <div class="key wide" id="key-end">END</div>
+        <div class="key wide" id="key-insert">INS</div>
+        <div class="key wide" id="key-delete">DEL</div>
+      </div>
+      <div id="keys-row2" class="key-row">
+        <div class="key" id="key-backquote">§</div>
+        <div class="key" id="key-digit1">1</div>
+        <div class="key" id="key-digit2">2</div>
+        <div class="key" id="key-digit3">3</div>
+        <div class="key" id="key-digit4">4</div>
+        <div class="key" id="key-digit5">5</div>
+        <div class="key" id="key-digit6">6</div>
+        <div class="key" id="key-digit7">7</div>
+        <div class="key" id="key-digit8">8</div>
+        <div class="key" id="key-digit9">9</div>
+        <div class="key" id="key-digit0">0</div>
+        <div class="key" id="key-minus">+</div>
+        <div class="key" id="key-equal">´</div>
+        <div class="key extra-wide" id="key-backspace">BACKSPACE</div>
+      </div>
+      <div id="keys-row3" class="key-row">
+        <div class="key wide" id="key-tab">tab</div>
+        <div class="key" id="key-q">Q</div>
+        <div class="key" id="key-w">W</div>
+        <div class="key" id="key-e">E</div>
+        <div class="key" id="key-r">R</div>
+        <div class="key" id="key-t">T</div>
+        <div class="key" id="key-y">Y</div>
+        <div class="key" id="key-u">U</div>
+        <div class="key" id="key-i">I</div>
+        <div class="key" id="key-o">O</div>
+        <div class="key" id="key-p">P</div>
+        <div class="key" id="key-bracketleft">Å</div>
+        <div class="key" id="key-bracketright">^ ~</div>
+        <div class="key wide tall" id="key-enter">ENTER</div>
+      </div>
+      <div id="keys-row4" class="key-row">
+        <div class="key extra-wide" id="key-capslock">CAPS LOCK</div>
+        <div class="key" id="key-a">A</div>
+        <div class="key" id="key-s">S</div>
+        <div class="key" id="key-d">D</div>
+        <div class="key" id="key-f">F</div>
+        <div class="key" id="key-g">G</div>
+        <div class="key" id="key-h">H</div>
+        <div class="key" id="key-j">J</div>
+        <div class="key" id="key-k">K</div>
+        <div class="key" id="key-l">L</div>
+        <div class="key" id="key-semicolon">Ö</div>
+        <div class="key" id="key-quote">Ä</div>
+        <div class="key" id="key-backslash">* '</div>
+      </div>
+      <div id="keys-row5" class="key-row">
+        <div class="key wide" id="key-leftshift">SHIFT</div>
+        <div class="key" id="key-intlbackslash"><<br>>|</div>
+        <div class="key" id="key-z">Z</div>
+        <div class="key" id="key-x">X</div>
+        <div class="key" id="key-c">C</div>
+        <div class="key" id="key-v">V</div>
+        <div class="key" id="key-b">B</div>
+        <div class="key" id="key-n">N</div>
+        <div class="key" id="key-m">M</div>
+        <div class="key" id="key-comma">;</div>
+        <div class="key" id="key-period">:</div>
+        <div class="key" id="key-slash">-</div>
+        <div class="key extra-wide" id="key-rightshift">SHIFT</div>
+      </div>
+      <div id="keys-row6" class="key-row">
+        <div class="key wide" id="key-leftctrl">CTRL</div>
+        <div class="key" id="key-metaleft">WIN</div>
+        <div class="key" id="key-leftalt">ALT</div>
+        <div class="key" id="key-space"></div>
+        <div class="key" id="key-rightalt">ALT</div>
+        <div class="key" id="key-contextmenu">CTX</div>
+        <div class="key" id="key-rightctrl">CTRL</div>
+        <div id="arrow-keys">
+          <div class="key" id="key-leftarrow">←</div>
+          <div id="up-down-arrows">
+            <div class="key" id="key-uparrow">↑</div>
+            <div class="key" id="key-downarrow">↓</div>
+          </div>
+          <div class="key" id="key-rightarrow">→</div>
+        </div>
+      </div>
+    </div>
+
     <!-- update the version number as needed -->
     <script src="/__/firebase/7.16.1/firebase-app.js"></script>
     <script src="/__/firebase/7.16.1/firebase-firestore.js"></script>
     <script src="/__/firebase/7.16.1/firebase-functions.js"></script>
     <script src="/__/firebase/init.js"></script>
     <script src="app.js"></script>
-    <div id="keyboard">
-
-    </div>
   </body>
 </html>
