--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Color My Keyboard</title>
   </head>
   <body>
+      <a id="git" href="https://github.com/kumpmati/color-my-keyboard" target="_new">GitHub</a>
     <div id="keyboard-wrapper">
         <h1>color my keyboard</h1>
         <div id="keyboard">
