removed cloud functions and added README

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
         <div id="color-picker-div">
             <h3>select a color:</h3>
             <input type="color" id="color-picker">
-            <h3>and press a key to change its color</h3>
+            <h3>and click on a key to change its color</h3>
         </div>
     </div>
     <!-- update the version number as needed -->
